--- a/provision.sh.tmpl
+++ b/provision.sh.tmpl
@@ -2,6 +2,7 @@ CODE_DIR=/home/todo_app
 ENV_FILE=.env
 ENV_FILE_PATH=$CODE_DIR/$ENV_FILE
 DOCKER_COMPOSE_PATH=$CODE_DIR/docker-compose.yml
+NGINX_FILE_PATH=/etc/nginx/conf.d/default.conf
 LOG_FILE="/var/log/web_app.log"
 
 log() {
@@ -57,9 +58,8 @@ run_docker_compose() {
 }
 
 install_ssl() {
-    log "Installing SSL"
-    apt-get install certbot python-certbot-nginx -y
-    certbot run -n --nginx --agree-tos -d ${domain} -m ${email} --redirect
+    log "Installing SSL.."
+    docker exec -it todo_app_frontend_1 certbot run -n --nginx --agree-tos -d ${domain} -m ${email} --redirect
 }
 
 # Create log file
@@ -81,6 +81,6 @@ configure_code
 
 run_docker_compose 2>&1 | tee $LOG_FILE
 
-# install_ssl
+install_ssl 2>&1 | tee $LOG_FILE
 
 log "Provisioning complete!"
